fixed layout issues

--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -45,7 +45,6 @@ body {
   webkit-box-shadow: -1px 1px 5px 4px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: -1px 1px 5px 4px rgba(0, 0, 0, 0.2);
   box-shadow: -1px 1px 3px 2px rgba(0, 0, 0, 0.2);
-
 }
 header {
   width: auto;
@@ -236,8 +235,8 @@ background-color: rgba(0, 0, 0, 0.1);
   background-color: #50504F;
 }
 .editmain {
-  width: 100%;
-  height: 1200px;
+  max-width: 70%;
+  overflow: hidden;
 }
 .TemplateSelector {
   height: 120px;
@@ -285,9 +284,14 @@ background-color: rgba(0, 0, 0, 0.1);
   background-color: rgba(0, 0, 0, 0.1);
 }
 .templateSelectorWrapperHome {
-  width: 70%;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
   float: left;
+}
+.editMainSettings {
+  width: 100%;
+  overflow: hidden;
 }
 .editinputs {
   float: left;
@@ -330,15 +334,12 @@ background-color: rgba(0, 0, 0, 0.1);
   border: none;
 }
 .editview {
-  width: 70%;
-  float: left;
-  /*border: 1px solid rgba(0, 0, 0, 0.1);*/
-  margin-top: 20px;
-
+  width: 100%;
 }
 .editField {
-  width: 100%;
+  width: 620px;
   margin: auto;
+  overflow: auto;
 }
 .editModal {
   margin: 10px;
@@ -426,13 +427,6 @@ background-color: rgba(0, 0, 0, 0.1);
   margin-bottom: 3px;
   padding: 3px;
   background-color: #50504F;
-  /*webkit-box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.4);
-  box-shadow: 0px 1px 2px 2px rgba(0, 0, 0, 0.4);
-
-  webkit-box-shadow: 2px 0px 2px 2px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 2px 0px 2px 2px rgba(0, 0, 0, 0.2);
-  box-shadow: 2px 0px 2px 2px rgba(0, 0, 0, 0.2);*/
 }
 /*.settingsMenuPhotoUpload:hover,.settingsMenuSignatureUpload:hover, .settingsMenuHeaderUpload:hover{
   background-color: #E6E6E6;
